@@ -36,7 +36,8 @@ data_files = [('share/PyCF/',['data/ice.cpt',
                               'data/topo.cpt',
                               'data/velo.cpt']),
               ('bin',['progs/add_projinfo.py',
-                      'progs/create_topo.py']),]
+                      'progs/create_topo.py',
+                      'progs/plotCFvar.py']),]
 
 setup (name = "PyCF",
        version = "0.0",
